--- a/unc-web/pom.xml
+++ b/unc-web/pom.xml
@@ -20,6 +20,11 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
