--- a/unc-web/pom.xml
+++ b/unc-web/pom.xml
@@ -9,17 +9,23 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc-parent</artifactId>
-        <version>1.0.6-RELEASE</version>
+        <version>1.0.9-RELEASE</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>com.unicorn</groupId>
             <artifactId>unc-core</artifactId>
-            <version>1.0.6-RELEASE</version>
+            <version>1.0.9-RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
