--- a/unc-core/pom.xml
+++ b/unc-core/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc-parent</artifactId>
-        <version>1.1.1-RELEASE</version>
+        <version>1.1.3-RELEASE</version>
     </parent>
 
     <properties>
@@ -100,6 +100,10 @@
             <version>2.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
