--- a/unc-web/pom.xml
+++ b/unc-web/pom.xml
@@ -9,14 +9,14 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc-parent</artifactId>
-        <version>1.4.4-RELEASE</version>
+        <version>1.4.4b-RELEASE</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>com.unicorn</groupId>
             <artifactId>unc-core</artifactId>
-            <version>1.4.4-RELEASE</version>
+            <version>1.4.4b-RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
