--- a/unc-core/pom.xml
+++ b/unc-core/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc-parent</artifactId>
-        <version>1.5.0-RELEASE</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <properties>
