--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc-parent</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
