--- a/unc-web/pom.xml
+++ b/unc-web/pom.xml
@@ -9,21 +9,21 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc-parent</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0-RELEASE</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>com.unicorn</groupId>
             <artifactId>unc-core</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>1.6.0-RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
     </dependencies>
