--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc-parent</artifactId>
-    <version>2.0.5-RELEASE</version>
+    <version>2.0.6-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>unc-core</module>
+        <module>unc-std</module>
         <module>unc-web</module>
     </modules>
 
@@ -23,7 +24,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.0.6.RELEASE</version>
     </parent>
 
     <dependencyManagement>
