--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 
     <name>unc</name>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <unc.version>2.0.6-RELEASE</unc.version>
+    </properties>
+
     <groupId>com.unicorn</groupId>
     <artifactId>unc-parent</artifactId>
     <version>2.0.6-RELEASE</version>
@@ -14,12 +19,9 @@
     <modules>
         <module>unc-core</module>
         <module>unc-std</module>
+        <module>unc-sms</module>
         <module>unc-web</module>
     </modules>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -41,6 +43,41 @@
                 <version>1.1.1</version>
                 <scope>compile</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>3.11.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.unicorn</groupId>
+                <artifactId>unc-core</artifactId>
+                <type>jar</type>
+                <version>${unc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.unicorn</groupId>
+                <artifactId>unc-std</artifactId>
+                <type>jar</type>
+                <version>${unc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.unicorn</groupId>
+                <artifactId>unc-sms</artifactId>
+                <type>jar</type>
+                <version>${unc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.unicorn</groupId>
+                <artifactId>unc-web</artifactId>
+                <type>jar</type>
+                <version>${unc.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
