--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <unc.version>2.1.2-RELEASE</unc.version>
+        <unc.version>2.1.2</unc.version>
     </properties>
 
     <groupId>com.unicorn</groupId>
-    <artifactId>unc-parent</artifactId>
-    <version>2.1.2-RELEASE</version>
+    <artifactId>unc</artifactId>
+    <version>2.1.2</version>
     <packaging>pom</packaging>
 
     <modules>
