--- a/unc-sms/pom.xml
+++ b/unc-sms/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.unicorn</groupId>
             <artifactId>unc-core</artifactId>
             <type>jar</type>
