--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <unc.version>3.1.2</unc.version>
+        <unc.version>3.1.3-RELEASE</unc.version>
     </properties>
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc</artifactId>
-    <version>3.1.2</version>
+    <version>3.1.3-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -48,6 +48,30 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>3.11.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.coobird</groupId>
+                <artifactId>thumbnailator</artifactId>
+                <version>0.4.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.5</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.2.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>2.3.2</version>
             </dependency>
 
             <dependency>
