--- a/unc-std/pom.xml
+++ b/unc-std/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc</artifactId>
-        <version>3.1.2</version>
+        <version>3.1.3-RELEASE</version>
     </parent>
 
     <dependencies>
@@ -29,7 +29,11 @@
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
-            <version>0.4.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
         </dependency>
 
         <dependency>
