--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,17 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <unc.version>3.1.3-RELEASE</unc.version>
+        <unc.version>3.1.4-SNAPSHOT</unc.version>
     </properties>
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc</artifactId>
-    <version>3.1.3-RELEASE</version>
+    <version>3.1.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>unc-core</module>
+        <module>unc-poi</module>
         <module>unc-std</module>
         <module>unc-sms</module>
         <module>unc-web</module>
@@ -74,6 +75,26 @@
                 <version>2.3.2</version>
             </dependency>
 
+            <!--poi start-->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>ooxml-schemas</artifactId>
+                <version>1.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.16</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>3.16</version>
+            </dependency>
+            <!--poi end-->
+
             <dependency>
                 <groupId>com.unicorn</groupId>
                 <artifactId>unc-common</artifactId>
@@ -105,6 +126,13 @@
             <dependency>
                 <groupId>com.unicorn</groupId>
                 <artifactId>unc-web</artifactId>
+                <type>jar</type>
+                <version>${unc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.unicorn</groupId>
+                <artifactId>unc-poi</artifactId>
                 <type>jar</type>
                 <version>${unc.version}</version>
             </dependency>
