--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <unc.version>3.1.4-RELEASE</unc.version>
+        <unc.version>3.1.5-SNAPSHOT</unc.version>
     </properties>
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc</artifactId>
-    <version>3.1.4-RELEASE</version>
+    <version>3.1.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -94,13 +94,6 @@
                 <version>3.16</version>
             </dependency>
             <!--poi end-->
-
-            <dependency>
-                <groupId>com.unicorn</groupId>
-                <artifactId>unc-common</artifactId>
-                <type>jar</type>
-                <version>${unc.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.unicorn</groupId>
