--- a/unc-core/pom.xml
+++ b/unc-core/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc</artifactId>
-        <version>3.1.6-SNAPSHOT</version>
+        <version>3.1.6-RELEASE</version>
     </parent>
 
     <dependencies>
