--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <unc.version>3.2.5-SNAPSHOT</unc.version>
+        <unc.version>3.2.5-RELEASE</unc.version>
     </properties>
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc</artifactId>
-    <version>3.2.5-SNAPSHOT</version>
+    <version>3.2.5-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
