--- a/unc-std/pom.xml
+++ b/unc-std/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc</artifactId>
-        <version>3.2.7-RELEASE</version>
+        <version>3.3.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
