--- a/unc-sms/pom.xml
+++ b/unc-sms/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.unicorn</groupId>
         <artifactId>unc</artifactId>
-        <version>3.3.0-SNAPSHOT</version>
+        <version>3.3.1-RELEASE</version>
     </parent>
 
     <dependencies>
