--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <unc.version>3.3.2-RELEASE</unc.version>
+        <unc.version>3.3.2-21-RELEASE</unc.version>
     </properties>
 
     <groupId>com.unicorn</groupId>
     <artifactId>unc</artifactId>
-    <version>3.3.2-RELEASE</version>
+    <version>3.3.2-21-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.4.RELEASE</version>
+        <version>2.1.13.RELEASE</version>
     </parent>
 
     <dependencyManagement>
